<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <item
        android:id="@+id/nav_profile"
        android:title="@string/profile"
        />


    <item
        android:id="@+id/nav_library"
        android:title="@string/MyLibrary" />

    <item
        android:id="@+id/nav_nightmode"
        android:title="@string/NightMode"
        android:checkable="true"
        app:actionLayout="@layout/layout_switch"/>

    <item
        android:id="@+id/lang"
        android:title="@string/language"
        android:checkable="true"
        app:actionLayout="@layout/layout_switch_lang"/>

    <item
        android:id="@+id/nav_artist"
        android:title="@string/Becomeanartist" />
    <item
        android:id="@+id/nav_about"
        android:title="@string/Aboutus" />
    <item
        android:id="@+id/nav_announcements"
        android:title="@string/Announcements" />
    <item
        android:id="@+id/nav_contactus"
        android:title="@string/ContactUs" />

</menu>
