<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/tabColor"
    tools:context=".Fragment.FeatureArtistFragment">

    <!-- TODO: Update blank fragment layout -->
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/Textcolor" />



        <ScrollView
            android:scrollbars="none"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:textSize="12dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="fill_horizontal"
                    android:textAlignment="gravity"
                    android:text="@string/sed_ut_perspiciatis" />
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="30dp">
                    <TextView
                        android:textSize="15sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/FullName" />
                    <EditText
                        android:id="@+id/et_artfullname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/Pleasetypecomments"
                        android:inputType="text" />
                    <TextView
                        android:textSize="15sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:text="@string/Mobile" />
                    <EditText
                        android:id="@+id/et_artmobile"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/enteryourmobileno."
                        android:inputType="phone" />
                    <TextView
                        android:textSize="15sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:text="@string/Email" />
                    <EditText
                        android:id="@+id/et_artemail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Please enter email id"
                        android:inputType="text" />
                    <TextView
                        android:textSize="15sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:text="@string/TypeofArt." />
                    <EditText android:id="@+id/et_arttype"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Select options"
                        android:inputType="text" />
                    <TextView
                        android:textSize="15sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:text="@string/Comments" />
                    <EditText
                        android:id="@+id/et_cntfullname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/Pleasetypecomments"
                        android:inputType="text" />
                    <android.support.v7.widget.AppCompatButton
                        android:textColor="@color/white"
                        android:gravity="center"
                        android:id="@+id/btn_artsubmit"
                        android:background="#3d3e40"
                        android:padding="20dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:text="@string/Submit." />
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </FrameLayout>
