<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:padding="10dp"
        android:background="@color/App_color"
        android:layout_height="80dp">
        <TextView
            android:layout_width="wrap_content"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="20dp"
            android:layout_marginTop="10dp"
            android:text="Song name Song name"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_width="wrap_content"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="15dp"
            android:text="airtst name"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:padding="20dp"
        android:background="@color/Qubeuecolor"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:text="@string/Createanewplaylist"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:textSize="18dp"
            android:padding="15dp"
            android:layout_height="wrap_content" />







        <LinearLayout
            android:layout_width="match_parent"
            android:background="@color/Qubeuecolor"
            android:layout_height="50dp">



            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/PublicPrivate"
                android:textSize="18dp"
                android:gravity="left"
                android:drawableEnd="@drawable/chevron_down"
                android:paddingRight="10dp"
                android:layout_gravity="center"
                android:textColor="@color/white"/>
        </LinearLayout>

        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:background="@color/Textcolor"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:background="@color/Qubeuecolor"
            android:layout_height="50dp">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Title"
                android:textSize="18dp"
                android:gravity="left"
                android:layout_gravity="center"
                android:textColor="@color/white"/>
        </LinearLayout>

        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:background="@color/Textcolor"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:background="@color/Qubeuecolor"
            android:layout_height="50dp">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Description"
                android:textSize="18dp"

                android:layout_gravity="center"
                android:textColor="@color/white"/>
        </LinearLayout>

        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:background="@color/Textcolor"/>


        <Button
            android:layout_width="match_parent"
            android:background="@color/App_color"
            android:text="@string/Add"
            android:layout_marginTop="20dp"
            android:textSize="18dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:textColor="@color/white"
            android:layout_height="match_parent" />



    </LinearLayout>

</LinearLayout>