<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:padding="5dp"
        android:background="@color/App_color"
        android:layout_height="80dp">
        <TextView
            android:layout_width="wrap_content"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="18dp"
            android:layout_marginTop="10dp"
            android:text="Lorem Ipsum dummmy text"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_width="wrap_content"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="12dp"
            android:text="sed Persp"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:padding="20dp"
        android:background="@color/Qubeuecolor"
        android:layout_height="wrap_content">



    <LinearLayout
        android:layout_width="match_parent"
        android:id="@+id/addqueues"
        android:background="@color/Qubeuecolor"
        android:layout_height="50dp">

        <ImageView
            android:layout_width="40dp"
            app:srcCompat="@drawable/pluswhite"
            android:layout_gravity="center"
            android:padding="7dp"
            android:layout_height="35dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/AddtoQueue"
            android:textSize="17dp"
            android:layout_marginLeft="20dp"
            android:layout_gravity="center"
            android:textColor="@color/white"/>
    </LinearLayout>

    <View
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:background="@color/Textcolor"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:background="@color/Qubeuecolor"
        android:layout_height="50dp">

        <ImageView
            android:layout_width="40dp"
            app:srcCompat="@drawable/arrow_downwhite"
            android:layout_gravity="center"
            android:padding="7dp"
            android:layout_height="35dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Download"
            android:textSize="17dp"
            android:layout_marginLeft="20dp"
            android:layout_gravity="center"
            android:textColor="@color/white"/>
    </LinearLayout>

    <View
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:background="@color/Textcolor"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:background="@color/Qubeuecolor"
        android:layout_height="50dp">

        <ImageView
            android:layout_width="30dp"
            android:src="@drawable/musicicon"
            android:layout_gravity="center"
            android:padding="7dp"
            android:layout_marginLeft="5dp"
            android:layout_height="35dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Addtoplaylist"
            android:textSize="17dp"
            android:layout_marginLeft="20dp"
            android:layout_gravity="center"
            android:textColor="@color/white"/>
    </LinearLayout>

    <View
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:background="@color/Textcolor"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:background="@color/Qubeuecolor"
        android:layout_height="50dp">

        <ImageView
            android:layout_width="40dp"
            android:src="@drawable/album"
            android:padding="7dp"
            android:layout_gravity="center"
            android:layout_height="35dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/GotoAlbum"
            android:textSize="17dp"
            android:layout_marginLeft="20dp"
            android:layout_gravity="center"
            android:textColor="@color/white"/>
    </LinearLayout>

    <View
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:background="@color/Textcolor"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:background="@color/Qubeuecolor"
        android:layout_height="50dp">

        <ImageView
            android:layout_width="40dp"
            android:src="@drawable/layric"
            android:padding="7dp"
            android:layout_gravity="center"
            android:layout_height="35dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/GotoLyrics"
            android:textSize="17dp"
            android:layout_marginLeft="20dp"
            android:layout_gravity="center"
            android:textColor="@color/white"/>
    </LinearLayout>


</LinearLayout>

</LinearLayout>