<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:padding="5dp"
        android:background="@color/App_color"
        android:layout_height="80dp">
        <TextView
            android:layout_width="wrap_content"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="16dp"
            android:layout_marginTop="10dp"
            android:text="Track name track name"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_width="wrap_content"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="12dp"
            android:text="Artist name"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:padding="20dp"
        android:background="@color/Qubeuecolor"
        android:layout_height="wrap_content">




        <LinearLayout
            android:layout_width="match_parent"
            android:background="@color/Qubeuecolor"
            android:layout_height="50dp">

            <ImageView
                android:layout_width="30dp"
                android:src="@drawable/ic_close_black_24dp"
                android:layout_gravity="center"
                android:padding="7dp"
                android:layout_marginLeft="5dp"
                android:layout_height="35dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Dequeue"
                android:textSize="17dp"
                android:layout_marginLeft="20dp"
                android:layout_gravity="center"
                android:textColor="@color/white"/>
        </LinearLayout>

        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:background="@color/Textcolor"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:background="@color/Qubeuecolor"
            android:layout_height="50dp">

            <ImageView
                android:layout_width="40dp"
                android:src="@drawable/download"
                android:padding="7dp"
                android:layout_gravity="center"
                android:layout_height="35dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Download"
                android:textSize="17dp"
                android:layout_marginLeft="20dp"
                android:layout_gravity="center"
                android:textColor="@color/white"/>
        </LinearLayout>

        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:background="@color/Textcolor"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:background="@color/Qubeuecolor"
            android:layout_height="50dp">

            <ImageView
                android:layout_width="40dp"
                android:src="@drawable/musicicon"
                android:padding="7dp"
                android:layout_gravity="center"
                android:layout_height="35dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Addtoplaylist"
                android:textSize="17dp"
                android:layout_marginLeft="20dp"
                android:layout_gravity="center"
                android:textColor="@color/white"/>
        </LinearLayout>


    </LinearLayout>

</LinearLayout>